correct bug with y_test in feedforward kera pt2

--- a/neural_networks/feedforward/pytorch/autoregression_pytorch_part2.ipynb
+++ b/neural_networks/feedforward/pytorch/autoregression_pytorch_part2.ipynb
@@ -1488,18 +1488,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 319,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11712908744812012"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import time\n",
     "#this code will take a few seconds to execute\n",
+    "start_time = time.time()\n",
     "H = 12\n",
     "e_preds = []\n",
-    "for model in models:\n",
+    "for model in models[:20]:\n",
     "    y_preds = autoregressive_iterative_forecast(model, X_test[0], h=H)\n",
     "    e_preds.append(y_preds)\n",
     "    \n",
-    "e_preds = np.array(e_preds)"
+    "e_preds = np.array(e_preds)\n",
+    "time.time() - start_time"
    ]
   },
   {
@@ -1589,7 +1603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extra credit.\n",
+    "## Extra exercises.\n",
     "* How would you use a ensemble method with a model that predicts a vector?"
    ]
   },
