updated vector_iterative_forecast to allow for different ws and h

--- a/neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
+++ b/neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,6 +1316,9 @@
     "    Conduct h one-step forecasts gradually\n",
     "    replacing ground truth autoregressive X \n",
     "    values with predictions.\n",
+    "    \n",
+    "    Assumes that h is less than or equal to the length of \n",
+    "    exog\n",
     "    \n",
     "    Parameters:\n",
     "    ------\n",
@@ -1339,16 +1342,17 @@
     "        y_pred = model.predict(current_X.reshape(1, -1))[0]\n",
     "        y_preds.append(y_pred)\n",
     "        \n",
-    "        #current_X = np.roll(current_X, shift=-h)\n",
-    "        #current_X[-h] = y_pred.copy()\n",
-    "        current_X = y_pred.copy()\n",
-    "\n",
+    "        #update the input array for the iterative prediction\n",
+    "        v_len = len(y_pred)\n",
+    "        current_X = np.roll(current_X, shift=-v_len)\n",
+    "        current_X[-v_len:] = y_pred.copy()\n",
+    "        \n",
     "    return np.concatenate(np.array(y_preds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1361,7 @@
        "(48,)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,16 +1374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcb30289890>"
+       "<matplotlib.legend.Legend at 0x7fcb300b9e10>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1403,6 +1407,13 @@
     "plt.plot(y_preds, label='forecast')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
