--- a/01_basics/01_practicals_notebooks/1_Exploring_ts_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/1_Exploring_ts_SOLUTIONS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Practical 1: Exploring time series data - model answers"
+    "# Computer Lab 1: Part 1. Exploring time series data"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
