draft cross val workshop

--- a/01_basics/01_practicals_notebooks/2_Naive_models_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/2_Naive_models_SOLUTIONS.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "This can be found in **\"out_appoints_mth.csv\"**\n",
     "\n",
-    "* Hint: this is monthly data.  You can use the Annual Start ('MS') frequency"
+    "* Hint: this is monthly data.  You can use the monthly Start ('MS') frequency"
    ]
   },
   {
