beginning deep learning 101

--- a/01_basics/01_practicals_notebooks/2_Naive_models_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/2_Naive_models_SOLUTIONS.ipynb
@@ -35,7 +35,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forecast-tools imports"
+    "# Install forecast-tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note this is only need if you are running in colab or if you have not installed\n",
+    "#uncomment the line below to install.\n",
+    "#!pip install forecast-tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# forecast-tools imports"
    ]
   },
   {
@@ -93,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1: Using Naive1 to forecast monthly ED reattendances."
+    "## Exercise 1: Using Naive1 to forecast monthly outpatient appointments."
    ]
   },
   {
@@ -102,7 +120,7 @@
    "source": [
     "**Step 1: Import monthly outpatient appointments time series**  \n",
     "\n",
-    "This can be found in **\"out_appoints_mth.csv\"**\n",
+    "This can be found in **\"data/out_appoints_mth.csv\"**\n",
     "\n",
     "* Hint: this is monthly data.  You can use the monthly Start ('MS') frequency"
    ]
@@ -118,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6916be4310>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7a5368bc90>"
       ]
      },
      "execution_count": 8,
@@ -258,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f691443a390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7a4e8452d0>"
       ]
      },
      "execution_count": 12,
@@ -329,7 +347,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f69143bd510>"
+       "<matplotlib.legend.Legend at 0x7f7a4e760990>"
       ]
      },
      "execution_count": 16,
@@ -430,7 +448,9 @@
     "\n",
     "Create a train test split where you holdback the final 6 months of the data.\n",
     "\n",
-    "Remember to work with the calender adjusted data."
+    "Remember to work with the calender adjusted data.\n",
+    "\n",
+    "* Hint: The test set is the last 6 rows in your pandas DataFrame"
    ]
   },
   {
@@ -448,6 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#train test split\n",
     "train = reattend_rate.iloc[:-6]\n",
     "test = reattend_rate.iloc[-6:]"
    ]
@@ -547,9 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 5: Create and fit Naive1, SNaive, Average, Drift and Ensemble baseline models**\n",
-    "\n",
-    "* Hint: remember that the `baseline_estimators()` function will create all of these objects for you and return them in a dict.  \n",
+    "**Step 5: Create and fit Naive1, and SNaive baseline models**\n",
     "\n",
     "* Hint: Fit the TRAINING data."
    ]
@@ -565,45 +584,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = baseline_estimators(seasonal_period=12)"
+    "model_1 = Naive1()\n",
+    "model_2 = SNaive(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NF1': Naive1(),\n",
-       " 'SNaive': SNaive1(period=12),\n",
-       " 'Average': Average(),\n",
-       " 'Drift': Drift(),\n",
-       " 'Ensemble': EnsembleNaive(seasonal_period=12)}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model_name, model in models.items():\n",
-    "    model.fit(train)"
+    "model_1.fit(train)\n",
+    "model_2.fit(train)"
    ]
   },
   {
@@ -626,13 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = {}\n",
-    "for model_name, model in models.items():\n",
-    "    preds[model_name] = model.predict(horizon=6)"
+    "preds_1 = model_1.predict(horizon=6)\n",
+    "preds_2 = model_2.predict(horizon=6)"
    ]
   },
   {
@@ -655,74 +650,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE\n",
-      "-----\n",
-      "NF1: 1.8876344086021497\n",
-      "SNaive: 7.152688172043011\n",
-      "Average: 7.199576964538029\n",
-      "Drift: 1.4316158900836307\n",
-      "Ensemble: 4.09378238330894\n"
+      "1.8876344086021497\n",
+      "7.152688172043011\n"
      ]
     }
    ],
    "source": [
-    "print('MAE\\n-----')\n",
-    "for model_name, model_preds in preds.items():\n",
-    "    mae = mean_absolute_error(y_true=test, y_pred=model_preds)\n",
-    "    print(f'{model_name}: {mae}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Step 8: Calculate the out of sample MAPE of each forecast method**\n",
-    "    \n",
-    "Would you still choose the same forecasting method?\n",
+    "mae_1 = mean_absolute_error(y_true=test, y_pred=preds_1)\n",
+    "mae_2 = mean_absolute_error(y_true=test, y_pred=preds_2)\n",
     "\n",
-    "Is it useful to calculate both metrics?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAPE\n",
-      "-----\n",
-      "NF1: 6.697481885215069\n",
-      "SNaive: 25.101923992830628\n",
-      "Average: 25.345322850255585\n",
-      "Drift: 5.010458453801927\n",
-      "Ensemble: 14.5218948986897\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('MAPE\\n-----')\n",
-    "for model_name, model_preds in preds.items():\n",
-    "    mae = mean_absolute_percentage_error(y_true=test, y_pred=model_preds)\n",
-    "    print(f'{model_name}: {mae}')"
+    "print(mae_1)\n",
+    "print(mae_2)"
    ]
   }
  ],
