--- a/06_neural_networks/deep_learning_101/lecture_deeplearning_101.ipynb
+++ b/06_neural_networks/deep_learning_101/lecture_deeplearning_101.ipynb
@@ -147,57 +147,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rescaled data\n",
-    "\n",
-    "You should always rescale the features that you use to train a neural network.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we will rescale all data to be between -1 and 1\n",
-    "from sklearn.preprocessing import MinMaxScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_rescale = cancer.columns[:-1]\n",
-    "\n",
-    "#create dataframe of quantitative data to rescale -1 to 1\n",
-    "df_to_rescale = cancer[to_rescale]\n",
-    "\n",
-    "#dataframe of y variable\n",
-    "y = cancer['malignant']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# do the rescaling and assign to dataframe\n",
-    "scaler = MinMaxScaler(feature_range=(-1, 1))\n",
-    "scaler.fit(df_to_rescale)\n",
-    "X_scaled = pd.DataFrame(scaler.transform(df_to_rescale))\n",
-    "X_scaled.columns = df_to_rescale.columns\n",
-    "\n",
-    "#take a look at the rescaled data\n",
-    "print(X_scaled.shape)\n",
-    "X_scaled.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Train-Test Split\n",
     "\n",
     "Just like other Machine Learning approaches we first do a train test split (and do not look at or use our test data until we are ready!)."
@@ -218,9 +167,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#split into x and y for split\n",
+    "X = cancer[cancer.columns[:-1]]\n",
+    "y = cancer['malignant']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#setting random_state means we always get the same split\n",
     "X_train, X_test, y_train, y_test \\\n",
-    "    = train_test_split(X_scaled.to_numpy(), y.to_numpy(), \n",
+    "    = train_test_split(X.to_numpy(), y.to_numpy(), \n",
     "                       test_size=0.20, \n",
     "                       random_state=42)"
    ]
@@ -241,8 +201,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#simple model if you classify everything as 1 \n",
-    "y_train.mean()"
+    "#class balance\n",
+    "unique_elements, counts_elements = np.unique(y_train, return_counts=True)\n",
+    "print(unique_elements, counts_elements)\n",
+    "print(y_train.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rescale data\n",
+    "\n",
+    "You should always rescale the features that you use to train a neural network.\n",
+    "\n",
+    "I recommend scaling **after** a train-test split where the scaler uses the **training** data.  In a production setting you cannot scale on the data you are about to predict!  You should aim to simulate this setting and avoid leakage!\n",
+    "\n",
+    "Here we will use [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html) to rescale features to range from 0 to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we will rescale all data to be between 0 and 1\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# do the rescaling and assign to dataframe\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "#scale training data (cast to dataframe)\n",
+    "X_train_scaled = pd.DataFrame(scaler.transform(X_train))\n",
+    "X_train_scaled.columns = cancer.columns[:-1]\n",
+    "\n",
+    "#scale test data (cast to dataframe)\n",
+    "X_test_scaled = pd.DataFrame(scaler.transform(X_test))\n",
+    "X_test_scaled.columns = cancer.columns[:-1]\n",
+    "\n",
+    "#take a look at the rescaled data\n",
+    "print(X_train_scaled.shape)\n",
+    "X_train_scaled.head()"
    ]
   },
   {
@@ -318,6 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# let's assume these are the probs assigned to a TRUE value\n",
     "cost = [0.1, 0.2, 0.8, 0.99]\n",
     "-np.log(cost)"
    ]
@@ -328,7 +337,7 @@
    "source": [
     "### Stochastic Gradient Descent and Backpropagation\n",
     "\n",
-    "Think of finding the best weights for your model as a large scale optimisation problem. Even in the simple first model we created there were 400+ parameters to optimise! To minimise these weights an algorithm is needed to estimate the gradient of the loss function and taking a **step** to gradually **decend** it into a local optima. \n",
+    "Think of finding the best weights for your model as a large scale optimisation problem. Even in the simple first model we created there were 400+ parameters to optimise! To optimise these weights an algorithm is needed to estimate the gradient of the loss function and taking a **step** to gradually **decend** it into a local optima. \n",
     "\n",
     "<img src=\"gradient1.png\" alt=\"drawing\" width=\"500\"/>\n",
     "\n",
@@ -367,7 +376,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "#fit the model and include a validation split to check for overfitting. \n",
-    "results = model.fit(x=X_train, \n",
+    "results = model.fit(x=X_train_scaled.to_numpy(), \n",
     "                    y=y_train, \n",
     "                    batch_size=32,\n",
     "                    validation_split=0.10, \n",
@@ -465,13 +474,13 @@
     "N_EPOCHS = 200\n",
     "\n",
     "# 0 fit silently; 1 show results per epoch\n",
-    "VERBOSE = 1\n",
+    "VERBOSE = 0\n",
     "\n",
     "########### Regularization options ########################\n",
-    "INCLUDE_DROPOUT = False\n",
+    "INCLUDE_DROPOUT = True\n",
     "DROPOUT_RATE = 0.2\n",
     "\n",
-    "INCLUDE_EARLY_STOP = False\n",
+    "INCLUDE_EARLY_STOP = True\n",
     "PATIENCE = 10\n",
     "\n",
     "#create an early stopping callback\n",
@@ -503,14 +512,13 @@
     "\n",
     "\n",
     "#fit the model and also pass in the callback\n",
-    "results_2 = model_2.fit(x=X_train, \n",
-    "                      y=y_train, \n",
-    "                      batch_size=32,\n",
-    "                      validation_split=0.10, \n",
-    "                      epochs=N_EPOCHS, \n",
-    "                      verbose=VERBOSE,\n",
-    "                      callbacks=callbacks)\n",
-    "\n",
+    "results_2 = model_2.fit(x=X_train_scaled, \n",
+    "                        y=y_train, \n",
+    "                        batch_size=32,\n",
+    "                        validation_split=0.10, \n",
+    "                        epochs=N_EPOCHS, \n",
+    "                        verbose=VERBOSE,\n",
+    "                        callbacks=callbacks)\n",
     "\n",
     "#plot loss and val loss\n",
     "plot_loss(results_2)\n"
@@ -533,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test.shape"
+    "X_test_scaled.to_numpy()[0].shape"
    ]
   },
   {
@@ -542,16 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test[0].reshape(1, -1)"
+    "X_test_scaled.to_numpy()[0].reshape(1, -1).shape"
    ]
   },
   {
@@ -567,11 +566,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_id = 0\n",
+    "test_id = 1\n",
     "\n",
-    "pred = model_2.predict(x=X_test[test_id].reshape(1, -1))[0,0]\n",
+    "pred = model_2.predict(x=X_test_scaled.to_numpy()[test_id].reshape(1, -1))[0,0]\n",
+    "print(f'prediction proba {pred:.2f}')\n",
     "print(f'prediction: {pred >= 0.5}')\n",
     "print(f'ground truth value: {y_test[test_id]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_2.predict(x=X_test_scaled.to_numpy()[test_id].reshape(1, -1))[0, 0]"
    ]
   },
   {
@@ -587,8 +596,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model_2.predict(x=X_test).flatten()\n",
-    "y_pred[1:10]"
+    "y_pred = model_2.predict(x=X_test_scaled.to_numpy()).flatten()\n",
+    "np.round(y_pred, 3)"
    ]
   },
   {
@@ -627,7 +636,7 @@
    "outputs": [],
    "source": [
     "#get predictions\n",
-    "y_pred = model_2.predict(x=X_test).flatten()"
+    "y_pred = model_2.predict(x=X_test_scaled.to_numpy()).flatten()"
    ]
   },
   {
@@ -675,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report = classification_report(y_test, y_pred >= THRESHOLD)\n",
+    "report = classification_report(y_test, y_pred >= THRESHOLD, digits=3)\n",
     "print(report)"
    ]
   },
@@ -699,8 +708,8 @@
    "outputs": [],
    "source": [
     "#get predictions\n",
-    "sample_no = 82\n",
-    "y_pred = model_2.predict(x=X_test[sample_no].reshape(1, -1)).flatten()\n",
+    "sample_no = 77\n",
+    "y_pred = model_2.predict(x=X_test_scaled.to_numpy()[sample_no].reshape(1, -1)).flatten()\n",
     "print(np.round(y_pred, 3))"
    ]
   },
@@ -719,7 +728,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_probas = [model_2(X_test[sample_no].reshape(1, -1), training=True) \n",
+    "y_probas = [model_2(X_test_scaled.to_numpy()[sample_no].reshape(1, -1), training=True) \n",
     "            for sample in range(100)]\n",
     "\n",
     "y_probas = np.round(np.stack(y_probas).flatten(), 2)\n",
