updated neural network forecasting lecture 2 learning objectives

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
@@ -18,13 +18,15 @@
     "---\n",
     "**LEARNING OBJECTIVES**\n",
     "\n",
-    "* Use a NN to mimic a linear model\n",
-    "* Generate h-step forecasts using an iterative approach\n",
-    "* Generate h-step forecast using a direct modelling approach\n",
+    "* Preprocess time series data to a format compatabile with a feedforward neural network\n",
+    "* Generate h-step forecasts using \n",
+    "    * an iterative approach\n",
+    "    * a direct modelling approach\n",
+    "    * a vector output layer approach\n",
     "* Construct a deep feedforward neural network for forecasting\n",
     "---\n",
     "\n",
-    "> **If you are struggling with the neural network aspects of this notebook then please note there is a Ordinary Least Squares regression version you can checkout**\n"
+    "> **If you are struggling with the neural network aspects of this notebook then please note there is a Ordinary Least Squares regression version you can explore.  This covers the preprocessing and iterative and direct methods for forecasting.**\n"
    ]
   },
   {
