updated keras forecasting tutorial text

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "## 2.3 Train the NN using the preprocessed series\n",
     "\n",
-    "After preprocessing the data, fitting the data is relatively straightforward.  We create an instance of `OLS` passing in the training data and call the `.fit()` method.  The method fit returns a `RegressionResults` object that we use for prediction.  We can called the `.summary()` method to see the fitted model."
+    "After preprocessing the data, fitting the data is relatively straightforward.  We create and compile an instance of a `Keras.models.Sequential` pass in the training data and call the `.fit()` method.  The method fit returns results that can be used to check for overfitting and convergence. "
    ]
   },
   {
