update practical 1 with code along links

--- a/01_basics/01_practicals_notebooks/4_Cross_validation_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/4_Cross_validation_SOLUTIONS.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "* How to apply time series cross validation to select the best forecasting model.\n",
     "\n",
-    "To keep things simple we will work with naive forecasting models."
+    "> To keep things simple we will work with naive forecasting models."
    ]
   },
   {
@@ -35,6 +35,16 @@
    "metadata": {},
    "source": [
     "# Forecast-tools imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#you will need to uncomment and run the below if you are using Google colab\n",
+    "#!pip install forecast-tools"
    ]
   },
   {
