--- a/01_basics/01_practicals_notebooks/Practical_2.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_2.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "* How to apply time series cross validation to select the best forecasting model.\n",
     "\n",
-    "To keep things simple we will work with naive forecasting models."
+    "> To keep things simple we will work with naive forecasting models.\n",
+    "\n",
+    "---\n",
+    "* A video introducing the notebook and a walk through of exercise 1 is available https://bit.ly/ts_cross_val\n",
+    "* A youtube video to help with python's generators (optional) https://www.youtube.com/watch?v=2eiFCQ-YAf4"
    ]
   },
   {
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#you will need to uncomment and run the below if you are using Google colab\n",
+    "#!pip install forecast-tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,11 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here ..."
+    "# your code here ...\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/out_appoints_mth.csv'"
    ]
   },
   {
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +233,7 @@
     "\n",
     "**Task:**\n",
     "\n",
-    "* Load the ED reattendance dataset 'ed_reattends1.csv'\n",
+    "* Load the ED reattendance dataset 'ed_reattends.csv' (url provide below)\n",
     "* Use a forecast horizon of 6 months with an initial training size of 1/3 of the dataset.\n",
     "* Test all Naive models: `Naive1`, `SNaive`, `Average`, `Drift`, `EnsembleNaive`\n",
     "* Select the forecast with the lowest mean absolute error.\n",
@@ -242,11 +257,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here ..."
+    "# your code here ...\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattend.csv'"
    ]
   },
   {
@@ -319,7 +335,7 @@
     "# Exercise 3.1 Repeat exercise 2 using forecast-tools.\n",
     "\n",
     "**Task**:\n",
-    "* Load the ED reattendance dataset 'ed_reattends1.csv'\n",
+    "* Load the ED reattendance dataset 'ed_reattends.csv'\n",
     "* Use a forecast horizon of 6 months with an initial training size of 1/3 of the dataset.\n",
     "* Test all Naive models: `Naive1`, `SNaive`, `Average`, `Drift`, `EnsembleNaive`\n",
     "* Select the forecast with the lowest mean absolute error.\n",
@@ -328,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +359,7 @@
     "\n",
     "**Task:** \n",
     "    \n",
-    "* Using forecast-tools and the ed_reattend1.csv data how do Naive1 and EnsembleNaive compare over forecast horizons of 1 to 6 months?"
+    "* Using forecast-tools and the ed_reattend.csv data how do Naive1 and EnsembleNaive compare over forecast horizons of 1 to 6 months?"
    ]
   },
   {
@@ -404,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
