--- a/01_basics/01_practicals_notebooks/Practical_2_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_2_SOLUTIONS.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "* How to apply time series cross validation to select the best forecasting model.\n",
     "\n",
-    "> To keep things simple we will work with naive forecasting models."
+    "> To keep things simple we will work with naive forecasting models.\n",
+    "\n",
+    "---\n",
+    "* A video introducing the notebook and a walk through of exercise 1 is available https://bit.ly/ts_cross_val\n",
+    "* A video to help with python's generators (optional) https://www.youtube.com/watch?v=2eiFCQ-YAf4"
    ]
   },
   {
@@ -345,7 +349,7 @@
     "\n",
     "**Task:**\n",
     "\n",
-    "* Load the ED reattendance dataset 'ed_reattends1.csv'\n",
+    "* Load the ED reattendance dataset 'ed_reattends.csv' (url provide below)\n",
     "* Use a forecast horizon of 6 months with an initial training size of 1/3 of the dataset.\n",
     "* Test all Naive models: `Naive1`, `SNaive`, `Average`, `Drift`, `EnsembleNaive`\n",
     "* Select the forecast with the lowest mean absolute error.\n",
@@ -373,7 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here ..."
+    "# your code here ...\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattend.csv'"
    ]
   },
   {
@@ -385,7 +390,7 @@
     "# example solution\n",
     "\n",
     "#load data\n",
-    "reattends = pd.read_csv('../../../hpdm097-data/forecasting/ed_reattend1.csv', \n",
+    "reattends = pd.read_csv(url, \n",
     "                   index_col='date', parse_dates=True, dayfirst=True)\n",
     "reattends.index.freq = 'MS'\n",
     "\n",
@@ -511,7 +516,7 @@
     "# Exercise 3.1 Repeat exercise 2 using forecast-tools.\n",
     "\n",
     "**Task**:\n",
-    "* Load the ED reattendance dataset 'ed_reattends1.csv'\n",
+    "* Load the ED reattendance dataset 'ed_reattends.csv'\n",
     "* Use a forecast horizon of 6 months with an initial training size of 1/3 of the dataset.\n",
     "* Test all Naive models: `Naive1`, `SNaive`, `Average`, `Drift`, `EnsembleNaive`\n",
     "* Select the forecast with the lowest mean absolute error.\n",
@@ -577,7 +582,7 @@
     "\n",
     "**Task:** \n",
     "    \n",
-    "* Using forecast-tools and the ed_reattend1.csv data how do Naive1 and EnsembleNaive compare over forecast horizons of 1 to 6 months?"
+    "* Using forecast-tools and the ed_reattend.csv data how do Naive1 and EnsembleNaive compare over forecast horizons of 1 to 6 months?"
    ]
   },
   {
