updated readme weeks 3 and 4

--- a/02_arima/arima_exercises_SOLUTIONS.ipynb
+++ b/02_arima/arima_exercises_SOLUTIONS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to **A**uto**R**egressive **I**ntegrated **M**oving **A**verage (ARIMA) Modelling\n",
+    "# Computer Lab 3: Introduction to **A**uto**R**egressive **I**ntegrated **M**oving **A**verage (ARIMA) Modelling\n",
     "\n",
     "**In this practical you will learn:**\n",
     "\n",
