--- a/03_prophet/prophet_exercises_SOLUTIONS.ipynb
+++ b/03_prophet/prophet_exercises_SOLUTIONS.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Facebook Prophet\n",
+    "# Computer Lab 4: Forecasting Daily Data using Facebook Prophet\n",
     "\n",
     "**In this practical you will learn:**\n",
     "\n",
     "* How to wrangle time series data into `Prophet` format\n",
     "* How to fit a `Prophet` model to a time series\n",
     "* How to obtain a point forecast and prediction intervals using `Prophet`\n",
-    "* How to use `Prophet`'s built in diagnostic and cross validation tools\n",
-    "* How to model special calender events."
+    "* How to model special calender events.\n",
+    "* How to use `Prophet`'s built in diagnostic and cross validation tools"
    ]
   },
   {
