--- a/02_arima/arima_exercises_SOLUTIONS.ipynb
+++ b/02_arima/arima_exercises_SOLUTIONS.ipynb
@@ -11,7 +11,11 @@
     "* How to automatically select ARIMA model parameters by minimising AIC\n",
     "* How to fit an ARIMA model to a time series\n",
     "* How to obtain a point forecast and prediction intervals using ARIMA\n",
-    "* How to use `pmdarima`'s built in cross validation tools"
+    "* How to use `pmdarima`'s built in cross validation tools\n",
+    "\n",
+    "---\n",
+    "* Introduction to Notebook: https://bit.ly/arima_intro\n",
+    "---"
    ]
   },
   {
