added prophet link to video

--- a/03_prophet/prophet_exercises_SOLUTIONS.ipynb
+++ b/03_prophet/prophet_exercises_SOLUTIONS.ipynb
@@ -12,7 +12,11 @@
     "* How to fit a `Prophet` model to a time series\n",
     "* How to obtain a point forecast and prediction intervals using `Prophet`\n",
     "* How to model special calender events.\n",
-    "* How to use `Prophet`'s built in diagnostic and cross validation tools"
+    "* How to use `Prophet`'s built in diagnostic and cross validation tools\n",
+    "\n",
+    "---\n",
+    "* Video to introduce the notebook: https://bit.ly/intro_prophet\n",
+    "---"
    ]
   },
   {
